force-app/main/default/objects/Patient__c/fields/Assigned__c.field-meta.xml
<CustomField>
    <fullName>Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Doctor</label>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Patients</relationshipLabel>
    <relationshipName>Patients</relationshipName>
    <type>Lookup</type>
</CustomField>