force-app/main/default/objects/Patient__c/fields/Bill_Amount__c.field-meta.xml
<CustomField>
    <fullName>Bill_Amount__c</fullName>
    <formula>Treatmentc__r.Amount_to_be_paid__c +  Treatmentc__r.Medicine__r.Total_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>