force-app/main/default/objects/Patient__c/fields/Bill_Paid__c.field-meta.xml
<CustomField>
    <fullName>Bill_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bill Paid</label>
    <type>Checkbox</type>
</CustomField>