force-app/main/default/objects/Patient__c/fields/Date_Admitted__c.field-meta.xml
<CustomField>
    <fullName>Date_Admitted__c</fullName>
    <label>Date Admitted</label>
    <required>true</required>
    <type>Date</type>
</CustomField>