force-app/main/default/objects/Patient__c/fields/Emergency_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Emergency Contact Email</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>