force-app/main/default/objects/Patient__c/fields/Is_Stay_Needed__c.field-meta.xml
<CustomField>
    <fullName>Is_Stay_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Stay Needed?</label>
    <type>Checkbox</type>
</CustomField>