force-app/main/default/objects/Patient__c/fields/Nurse_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Nurse_Allocated__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nurse Allocated</label>
    <referenceTo>Nurse__c</referenceTo>
    <relationshipLabel>Patients</relationshipLabel>
    <relationshipName>Patients</relationshipName>
    <type>Lookup</type>
</CustomField>