force-app/main/default/objects/Patient__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Patient Email</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>