force-app/main/default/objects/Patient__c/fields/Patient_Details__c.field-meta.xml
<CustomField>
    <fullName>Patient_Details__c</fullName>
    <formula>&quot;Date Admitted: &quot; &amp; TEXT(Date_Admitted__c) &amp; &quot; | &quot; &amp; &quot;Date Discharged: &quot; &amp; TEXT(Date_Discharged__c)</formula>
    <label>Patient Details</label>
    <type>Text</type>
</CustomField>