force-app/main/default/objects/Patient__c/fields/RCB_Percent__c.field-meta.xml
<CustomField>
    <fullName>RCB_Percent__c</fullName>
    <label>RCB Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>