force-app/main/default/objects/Patient__c/fields/Room_No__c.field-meta.xml
<CustomField>
    <fullName>Room_No__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Room No</label>
    <referenceTo>Rooms__c</referenceTo>
    <relationshipLabel>Patients (Room No)</relationshipLabel>
    <relationshipName>Patients1</relationshipName>
    <type>Lookup</type>
</CustomField>