force-app/main/default/objects/Patient__c/fields/Saluation__c.field-meta.xml
<CustomField>
    <fullName>Saluation__c</fullName>
    <label>Saluation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Saluation</valueSetName>
    </valueSet>
</CustomField>