force-app/main/default/objects/Patient__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>Observation</fullName>
            </value>
            <value>
                <fullName>Recovery</fullName>
            </value>
            <value>
                <fullName>Stable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>