force-app/main/default/objects/Patient__c/fields/Treatment__c.field-meta.xml
<CustomField>
    <fullName>Treatment__c</fullName>
    <label>Treatment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Treatment_Types__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Therapies</fullName>
            </value>
            <value>
                <fullName>Specialty care</fullName>
            </value>
            <value>
                <fullName>General Surgery</fullName>
            </value>
            <value>
                <fullName>Emergency Department</fullName>
            </value>
            <value>
                <fullName>Chemotherapy</fullName>
            </value>
            <value>
                <fullName>Blood Services</fullName>
            </value>
            <value>
                <fullName>Surgery</fullName>
            </value>
            <value>
                <fullName>Radiology</fullName>
            </value>
            <value>
                <fullName>Primary care</fullName>
            </value>
            <value>
                <fullName>Cardiac rehabilitation</fullName>
            </value>
            <value>
                <fullName>Radiation therapy</fullName>
            </value>
            <value>
                <fullName>Psychodynamic Therapy</fullName>
            </value>
            <value>
                <fullName>Psychiatry</fullName>
            </value>
            <value>
                <fullName>Pediatrics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>