force-app/main/default/objects/Patient__c/fields/Treatment_Types__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Types__c</fullName>
    <label>Treatment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Curative</fullName>
            </value>
            <value>
                <fullName>Preventative</fullName>
            </value>
            <value>
                <fullName>Palliative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>