force-app/main/default/objects/Patient__c/fields/Treatmentc__c.field-meta.xml
<CustomField>
    <fullName>Treatmentc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Treatment</label>
    <referenceTo>Treatment__c</referenceTo>
    <relationshipLabel>Patients</relationshipLabel>
    <relationshipName>Patients</relationshipName>
    <type>Lookup</type>
</CustomField>