force-app/main/default/objects/Patient__c/validationRules/Discharge_or_Not.validationRule-meta.xml
<ValidationRule>
    <fullName>Discharge_or_Not</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Patient_Status__c, &quot;Discharged&quot;),
    NOT(Bill_Paid__c)
)</errorConditionFormula>
    <errorMessage>Bill Needs to be paid</errorMessage>
</ValidationRule>