force-app/main/default/objects/Patient__c/validationRules/if_is_stay_need_then_room_allocation.validationRule-meta.xml
<ValidationRule>
    <fullName>if_is_stay_need_then_room_allocation</fullName>
    <active>false</active>
    <errorConditionFormula>AND( Is_Stay_Needed__c , ISBLANK( Room_No__c ) )</errorConditionFormula>
    <errorDisplayField>Room_No__c</errorDisplayField>
    <errorMessage>Need to fill the room</errorMessage>
</ValidationRule>