force-app/main/default/objects/Patient__c/validationRules/Validation_for_patient.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_for_patient</fullName>
    <active>false</active>
    <errorConditionFormula>Date_Admitted__c &gt; Date_Discharged__c</errorConditionFormula>
    <errorMessage>The date of discharge cannot
be earlier than the date admitted.</errorMessage>
</ValidationRule>