force-app/main/default/objects/Patient__c/listViews/Patient_Stage_Critical.listView-meta.xml
<ListView>
    <fullName>Patient_Stage_Critical</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Full_Name__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Critical</value>
    </filters>
    <label>Patient Stage Critical</label>
</ListView>