force-app/main/default/objects/Patient__c/listViews/Patient_with_dues.listView-meta.xml
<ListView>
    <fullName>Patient_with_dues</fullName>
    <columns>NAME</columns>
    <columns>Bill_Paid__c</columns>
    <columns>Full_Name__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Bill_Paid__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Patient with dues</label>
</ListView>